# cpp1

./: .gitignore  CMakeLists.txt  lib.h  main.cpp  run.sh  task.txt  test_version.cpp  version.h.in
.github/: release.yml
.github/workflows/: c-cpp.yml
